fixing some radio inputs distortions on forms

--- a/code_backend_theme/static/src/scss/theme.scss
+++ b/code_backend_theme/static/src/scss/theme.scss
@@ -464,10 +464,10 @@ th.o_list_record_selector {
     cursor: pointer;
     margin-right: 5px;
 }
-.custom-control-label::before {
+.custom-control-label::before {//revisar 
     position: absolute;
-    top: 0px !important;
-    left: 1px !important;
+    // top: 0px !important;
+    // left: 0px !important;
     display: block;
     width: 1rem;
     height: 1rem;
@@ -477,7 +477,7 @@ th.o_list_record_selector {
     border: 1px solid rgba(0,0,0,.25) !important;
     box-shadow: none !important;
     border-radius: 5 !important;
-    margin-top: -5px;
+    // margin-top: -5px;
 }
 .custom-checkbox {
     padding-left: 0rem !important;
@@ -516,10 +516,12 @@ th.o_list_record_selector {
     color: #ffffff;
     background-color: #556ee6;
     border-color: #556ee6;
+   
 }
 .custom-control.custom-checkbox .custom-control-input:not(:checked):not(:indeterminate) ~ .custom-control-label:before {
     background: none;
     outline: none !important;
+   
 }
 
 .o_list_selection_box {
@@ -533,8 +535,8 @@ th.o_list_record_selector {
 }
 .o_radio_input +  .custom-control-label::before {
     position: absolute !important;
-    top: 8.5px !important;
-    left: -1.5rem !important;
+    // top: 8.5px !important;
+    // left: -1.5rem !important;
     display: block !important;
     width: 1rem !important;
     height: 1rem !important;
@@ -546,7 +548,7 @@ th.o_list_record_selector {
 .custom-radio .custom-control-input:checked ~ .custom-control-label::after {
     background: $primary_accent !important;
     border-radius: 30px;
-}
+} //revisar
 // Checkbox End
 
 //sheet
